Fixed Travis CI script

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ language: c
 compiler: gcc
 
 # only build branches on whitelist
-branches:
-  only:
-    - setup-ci
+# branches:
+#   only:
+#     - setup-ci
 
 # install dependencies
 before_install:
