Added dependencies to continuous integration configuration file

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,11 @@ env:
 language: c
 compiler: gcc
 
-# only build branches on whitelist
-branches:
-  only:
-    - setup-ci
-
 # install dependencies
 before_install:
   - sudo apt-get install libcairo2-dev
+  - sudo apt-get install libvorbis-dev
+  - sudo apt-get install libvorbisenc2
 
 # before build script, run autoreconf
 before_script: autoreconf -i
